syntax = "proto3";

package market;

option go_package = "github.com/jaftdelgado/aureum-services/MarketGRPCService/proto;proto";

// Petición: ahora también recibimos el team (uuid)
message MarketRequest {
  int32 interval_seconds = 1; // default 4 si viene 0 o negativo
  string team_public_id  = 2; // <-- NUEVO: uuid del team
}

// Respuesta por cada “tick” de mercado
message MarketAsset {
  int32 id = 1;
  string symbol = 2;
  string name = 3;
  double price = 4;
  double base_price = 5;
  double volatility = 6;
}

message MarketResponse {
  int64 timestamp_unix_millis = 1;
  repeated MarketAsset assets = 2;
}

// Servicio gRPC
service MarketService {
  rpc CheckMarket (MarketRequest) returns (stream MarketResponse);
}
